--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,7 +1,7 @@
 FROM almalinux:9
 RUN dnf install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
-ADD https://raw.githubusercontent.com/daws-84s/notes/refs/heads/main/session-01.txt /usr/share/nginx/html/index.html
+ADD https://github.com/Naga0848/Dockerfiles/blob/main/ADD/Dockerfile
 RUN chmod +r /usr/share/nginx/html/index.html
 ADD sample-1.tar /tmp/
 CMD ["nginx", "-g", "daemon off;"]
