--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
-ENV COURSE="DevOps" \
-    TRAINER="Sivakumar" \
-    DURATION="120HRS"
+ENV ROLE="Consultant" \
+    NAME="Nagashankar" \
+    PROFESSION="Software"
 CMD ["sleep", "1000"]
